Fix nav markup and priority to keep core links visible

--- a/styles.css
+++ b/styles.css
@@ -358,7 +358,7 @@ img {
 
 .nav-more {
   position: relative;
-  display: none;
+  display: block;
 }
 
 .nav-more-btn {
@@ -526,7 +526,7 @@ img {
 
   .nav-more {
     position: relative;
-    display: none;
+    display: block;
   }
 
   .nav-more-btn {
